--- a/tools/benchmarking.Rmd
+++ b/tools/benchmarking.Rmd
@@ -1668,7 +1668,7 @@ fwrite(params, "~/../../media/gvbarroso/extradrive1/landscapes/lookup_tbl.csv", 
 
 ```{r, BGS-mutvar-landscapes, include=F, eval=F, results=F, message=F, warning=F}
 
-lookup_tbl <- fread("~/../../media/gvbarroso/extradrive1/landscapes/lookup_tbl.csv")
+lookup_tbl <- setDT(fread("~/../../media/gvbarroso/extradrive1/landscapes/lookup_tbl.csv"))
 # TODO setkey
 
 # constants
@@ -1688,10 +1688,9 @@ avg_rec_spans <- c(1e+3, 1e+4, 1e+5, 1e+6)
 avg_mut_spans <- c(1e+3, 1e+4, 1e+5, 1e+6)
 avg_neutral_lengths <- 1e+4
 exon_lengths <- c(100, 1000)  
-models <- crossing(N, num_constrained, shape_sel, scale_sel, shapes_mu, scales_mu, shapes_rec, scales_rec, 
-                   avg_rec_spans, avg_mut_spans, avg_neutral_lengths, exon_lengths)
+models <- setDT(crossing(N, num_constrained, shape_sel, scale_sel, shapes_mu, scales_mu, shapes_rec, scales_rec, 
+                avg_rec_spans, avg_mut_spans, avg_neutral_lengths, exon_lengths))
 models$scenario <- 1:nrow(models)
-models_dt <- setDT(models)
 n_models <- nrow(models)
 
 fwrite(models, "~/../../media/gvbarroso/extradrive1/landscapes/models.csv", row.names=F, quote=F, sep=",")
@@ -1721,24 +1720,18 @@ for(i in 1:n_models) {
   disc_ss <- dt_s[dt_s[J(ss), roll="nearest", which=T]]$lookup_s
   
   intervals <- c(rbind(ncsl, csl))[-2*length(ncsl)]
-  intervals <- bind_cols(chr="chr1", dplyr::lag(cumsum(intervals), n=1, default=0), dplyr::lag(cumsum(intervals), n=0, default=0))
+  intervals <- setDT(bind_cols(chr="chr1", dplyr::lag(cumsum(intervals), n=1, default=0), dplyr::lag(cumsum(intervals), n=0, default=0)))
   names(intervals) <- c("chr", "start", "end")
   intervals$s <- c(rbind(rep(0, length(csl)), disc_ss), 0)
 
-  fwrite(intervals, "intervals_map.csv")
-  
-  neutral <- as.data.frame(filter(intervals[,2:4], s==0))
-  dt_neutral <- setDT(neutral)
+  neutral <- filter(intervals[,2:4], s==0)
   setattr(dt_neutral, "sorted", "start")
   setattr(dt_neutral, "sorted", "end")
   
   exons <- filter(intervals, s < 0)
   exons$u <- 1e-8
-  exons_dt <- setDT(exons)
   setattr(exons_dt, "sorted", "start")
   setattr(exons_dt, "sorted", "end")
-  
-  fwrite(exons, "exons_map.csv")
   
   rec_spans <- rgeom(n=ceiling(L/models$avg_rec_spans[i]), prob=1/models$avg_rec_spans[i])
   while(sum(rec_spans) < L) {
@@ -1750,17 +1743,12 @@ for(i in 1:n_models) {
   }
   rec_spans <- rec_spans[-which(rec_spans==0)]
   
-  rmap <- bind_cols(chr="chr1", dplyr::lag(cumsum(rec_spans), n=1, default=0), dplyr::lag(cumsum(rec_spans), n=0, default=0))
+  rmap <- setDT(bind_cols(chr="chr1", dplyr::lag(cumsum(rec_spans), n=1, default=0), dplyr::lag(cumsum(rec_spans), n=0, default=0)))
   names(rmap) <- c("chr", "start", "end")
   rs <- rgamma(n=nrow(rmap), shape=models$shapes_rec[i], scale=models$scales_rec[i]/models$shapes_rec[i])
   disc_rs <- dt_r[dt_r[J(rs), roll="nearest", which=T]]$lookup_r
   rmap$r <- disc_rs
-  rec_dt <- setDT(rmap)
-  setattr(rec_dt, "sorted", "start")
-  setattr(rec_dt, "sorted", "end")
-  setkey(rec_dt, start, end)
-  
-  fwrite(rmap, "rec_map.csv")
+  setkey(rmap, start, end)
   
   mut_spans <- rgeom(n=ceiling(L/models$avg_mut_spans[i]), prob=1/models$avg_mut_spans[i])
   while(sum(mut_spans) < L) {
@@ -1772,19 +1760,14 @@ for(i in 1:n_models) {
   }
   mut_spans <- mut_spans[-which(mut_spans==0)]
   
-  mmap <- bind_cols(chr="chr1", dplyr::lag(cumsum(mut_spans), n=1, default=0), dplyr::lag(cumsum(mut_spans), n=0, default=0))
+  mmap <- setDT(bind_cols(chr="chr1", dplyr::lag(cumsum(mut_spans), n=1, default=0), dplyr::lag(cumsum(mut_spans), n=0, default=0)))
   names(mmap) <- c("chr", "start", "end")
   mus <- rgamma(n=nrow(mmap), shape=models$shapes_mu[i], scale=models$scales_mu[i]/models$shapes_mu[i])
   disc_mus <- dt_u[dt_u[J(mus), roll="nearest", which=T]]$lookup_ul
   mmap$u <- disc_mus
-  mut_dt <- setDT(mmap)
-  setattr(mut_dt, "sorted", "start")
-  setattr(mut_dt, "sorted", "end")
-  setkey(mut_dt, start, end)
+  setkey(mmap, start, end)
   
-  fwrite(mmap, "mut_map.csv")
-
-  # finding the cumulative recombination map over the useful intervals
+  # finding the cumulative recombination map over the useful intervals (for loop with dplyr::filter seems to be best!)
   samp_pos <- unlist(apply(neutral, 1, function(x) seq(from=x[1], to=x[2], by=jump_length))) + 1
   linear_pos <- sort(c(samp_pos, exons$start + models$exon_lengths[i]/2))
   focal_mu <- numeric(length=length(linear_pos))
@@ -1792,6 +1775,7 @@ for(i in 1:n_models) {
   focal_mu[1] <- mmap[1,]$u
   cum_rec[1] <- rmap[1,]$r
   pb <- txtProgressBar(min=2, max=length(linear_pos), style=3)
+  # TODO check warnings in this loop:
   for(j in 2:length(linear_pos)) {
     setTxtProgressBar(pb, j)
     focal_mu[j] <- filter(mmap, start <= linear_pos[j], end >= linear_pos[j])$u 
@@ -1800,9 +1784,10 @@ for(i in 1:n_models) {
   }
   close(pb)
   
-  samp_map <- bind_cols(linear_pos, focal_mu, cum_rec)
-  names(samp_map) <- c("position", "focal_mu", "cumrec")
-
+  pos_dt <- setDT(bind_cols(linear_pos, focal_mu, cum_rec))
+  names(pos_dt) <- c("position", "focal_mu", "cumrec")
+  setkey(pos_dt, position)
+  
   # binning for linear models
   bins <- rep(bin_size, floor(L / bin_size))
   bins <- bind_cols(chr="chr1", dplyr::lag(cumsum(bins), n=1, default=0), dplyr::lag(cumsum(bins), n=0, default=0))
@@ -1833,49 +1818,37 @@ for(i in 1:n_models) {
   mut_bins <- mut_bins %>% distinct(bins, .keep_all=T)
   
   # binning DFE
+  intervals$start <- intervals$start + 1 # so that GRanges understands the intervals -> NOT in BEDGRAPH format
   dfe_gr <- makeGRangesFromDataFrame(intervals, keep.extra.columns=T)
   hits <- findOverlaps(query=gr_bins, subject=dfe_gr) 
   hit_list <- as.data.frame(hits)
   names(hit_list) <- c("bins", "dfe")
   intervals$dfe <- 1:nrow(intervals)
   tmpd <- merge(intervals, hit_list)
-  dfe_bins <- tmpd %>% group_by(bins) %>% mutate(avg_s=weighted.mean(s, end-start))
+  dfe_bins <- tmpd %>% group_by(bins) %>% mutate(avg_s=weighted.mean(s, end-start)) # avg_s encompasses density of constrained sites
   dfe_bins <- dfe_bins %>% distinct(bins, .keep_all=T)
   
   # to use in the linear models
   maps_bins <- bind_cols(bins, rec_bins["avg_rec"], mut_bins["avg_mut"], dfe_bins["avg_s"])
-  
+      
   BGS <- numeric(length=length(samp_pos))
   Rprof() # profiler
-  for(j in 1:length(samp_pos)) { # gets pi at different positions of the genome
+  for(j in 1:length(samp_pos)) { # TODO parallelize here
     
     pos <- samp_pos[j]
-    samp_slice <- filter(samp_map, position==pos)
-    focal_ur <- samp_slice$focal_mu
+    focal_ur <- pos_dt[position==pos]$focal_mu
     pi0 <- 2 * N * focal_ur
     B <- 1 
       
     for(k in 1:nrow(exons)) { 
       
-      focal_s <- exons$s[k]
-      # TODO slow, make faster:
-      mbins <- as.data.frame(findOverlaps(query=mut_gr, subject=makeGRangesFromDataFrame(data.frame(chr="chr1", start=exons$start[k], end=exons$end[k])))) 
-      mbins <- mmap[mbins$queryHits,] %>% mutate(avg_mu=(weighted.mean(u, end-start)))
-      focal_ul <- mbins$avg_mu[1]
-      # TODO slow, make faster (data.table bin search):
-      total_r <- abs(samp_map[samp_map$position==exons[k,]$start + 50,]$cumrec - samp_map[samp_map$position==pos,]$cumrec)
+      focal_s <- exons[k,]$s
+      focal_ul <- exons[k,]$u
+      total_r <- abs(pos_dt[pos_dt$position==exons[k,]$start + 50,]$cumrec - pos_dt[pos_dt$position==pos,]$cumrec)
 
-      #cat(paste("pos =", pos, "exon =", k, "\t"))
-      #cat(paste(exons$start[k], exons$end[k], "\t"))
-      #cat(paste("total_r =", total_r, "\n"))
-      closest_r <- lookup_r[which.min(abs(lookup_r - total_r))] # TODO implement interpolation
-      
       if(total_r < 1e-3) {
-        #system.time(lookup_tbl %>% filter(., r==closest_r, s==closest_s, ul==focal_ul, ur==focal_ur))
-        #system.time(entry <- filter(lookup_tbl, r==closest_r, s==closest_s, ul==focal_ul, ur==focal_ur))
-        #B <- B * (entry$Hr / entry$pi0) ^ models$exon_lengths[i]
-        
         # TODO implement interpolation
+        closest_r <- lookup_r[which.min(abs(lookup_r - total_r))] 
         hr <- filter(lookup_tbl, r==closest_r, s==focal_s, ul==focal_ul, ur==focal_ur)$Hr
         B <- B * (hr / pi0) ^ models$exon_lengths[i] # use coarse-grained predictions Good et al 2014?
       } else {
